// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot on Android 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderRadius": 3,
              "elevation": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "paddingBottom": 10,
              "paddingTop": 10,
              "shadowColor": "#282828",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.5,
              "shadowRadius": 1,
            },
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <IonIcon
          name={undefined}
          size={24}
        />
        <DefaultFont
          style={
            Object {
              "color": "#fff",
              "fontFamily": "System",
              "fontWeight": "bold",
              "marginLeft": 0,
            }
          }
        />
      </View>,
      "onPress": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <IonIcon
            name={undefined}
            size={24}
          />,
          <DefaultFont
            style={
              Object {
                "color": "#fff",
                "fontFamily": "System",
                "fontWeight": "bold",
                "marginLeft": 0,
              }
            }
          />,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 3,
            "elevation": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "paddingBottom": 10,
            "paddingTop": 10,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 1,
          },
          Object {
            "backgroundColor": undefined,
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "name": undefined,
            "size": 24,
          },
          "ref": null,
          "rendered": null,
          "type": "IonIcon",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": undefined,
            "style": Object {
              "color": "#fff",
              "fontFamily": "System",
              "fontWeight": "bold",
              "marginLeft": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 3,
                "elevation": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 5,
                "paddingBottom": 10,
                "paddingTop": 10,
                "shadowColor": "#282828",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0.5,
                "shadowRadius": 1,
              },
              Object {
                "backgroundColor": undefined,
              },
            ]
          }
        >
          <IonIcon
            name={undefined}
            size={24}
          />
          <DefaultFont
            style={
              Object {
                "color": "#fff",
                "fontFamily": "System",
                "fontWeight": "bold",
                "marginLeft": 0,
              }
            }
          />
        </View>,
        "onPress": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <IonIcon
              name={undefined}
              size={24}
            />,
            <DefaultFont
              style={
                Object {
                  "color": "#fff",
                  "fontFamily": "System",
                  "fontWeight": "bold",
                  "marginLeft": 0,
                }
              }
            />,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderRadius": 3,
              "elevation": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "paddingBottom": 10,
              "paddingTop": 10,
              "shadowColor": "#282828",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.5,
              "shadowRadius": 1,
            },
            Object {
              "backgroundColor": undefined,
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "name": undefined,
              "size": 24,
            },
            "ref": null,
            "rendered": null,
            "type": "IonIcon",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": undefined,
              "style": Object {
                "color": "#fff",
                "fontFamily": "System",
                "fontWeight": "bold",
                "marginLeft": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot on iOS 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <IonIcon
          name={undefined}
          size={24}
        />,
        <DefaultFont
          style={
            Object {
              "color": "#fff",
              "fontFamily": "System",
              "fontWeight": "bold",
              "marginLeft": 0,
            }
          }
        />,
      ],
      "onPress": undefined,
      "style": Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 3,
          "elevation": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginBottom": 5,
          "paddingBottom": 10,
          "paddingTop": 10,
          "shadowColor": "#282828",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 1,
        },
        Object {
          "backgroundColor": undefined,
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "name": undefined,
          "size": 24,
        },
        "ref": null,
        "rendered": null,
        "type": "IonIcon",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": undefined,
          "style": Object {
            "color": "#fff",
            "fontFamily": "System",
            "fontWeight": "bold",
            "marginLeft": 0,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <IonIcon
            name={undefined}
            size={24}
          />,
          <DefaultFont
            style={
              Object {
                "color": "#fff",
                "fontFamily": "System",
                "fontWeight": "bold",
                "marginLeft": 0,
              }
            }
          />,
        ],
        "onPress": undefined,
        "style": Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 3,
            "elevation": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "paddingBottom": 10,
            "paddingTop": 10,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 1,
          },
          Object {
            "backgroundColor": undefined,
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "name": undefined,
            "size": 24,
          },
          "ref": null,
          "rendered": null,
          "type": "IonIcon",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": undefined,
            "style": Object {
              "color": "#fff",
              "fontFamily": "System",
              "fontWeight": "bold",
              "marginLeft": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
